Fix error; avoid jansi warnings
Signed-off-by: Tom <tom@temper.systems>